--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-title: "Your Name"
-description: "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam"
-about: "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam"
-location: "Your Region, Country"
-email: your-email@example.com
-baseurl: "/material-theme"
+title: "Arunas Mazeika"
+description: "Web Developer in Nantes, France"
+about: "I'm a backend web developer passionate about code who likes to spend his time writing things for the web. While advocating re-factoring above all I also believe that writing simple and clean code is the key for creating great software. Less is MORE! and cats are evil creatures"
+location: "Nantes, France"
+email: me@arunasmazeika.com
+baseurl: ""
 
-url: "http://himsel.me" # replace by your site's url
-twitter_username: your-name
-github_username:  lukas-h
-author: "Your Name"
+url: "http://www.arunasmazeika.com" # replace by your site's url
+#twitter_username: your-name
+github_username:  amazeika
+author: "Arunas Mazeika"
 
 # google analytics tracking code, please change the value
 g_analytics: ""
@@ -23,9 +23,9 @@ disqus_shortname:
 isolang: en
 close_btn: "Close"
 home_btn: "Home"
-projects_btn: "Projects"
-posts_btn: "Posts"
-imprint_btn: "Imprint"
+#projects_btn: "Projects"
+#posts_btn: "Posts"
+#imprint_btn: "Imprint"
 name_badge: "an article by"
 rss_badge: "Subscribe feed!"
 
