Update config file

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,9 @@ close_btn: "Close"
 home_btn: "Home"
 #projects_btn: "Projects"
 #posts_btn: "Posts"
+experiences_btn: "Experience"
+education_btn: "Education"
+skills_btn: "Skills"
 #imprint_btn: "Imprint"
 name_badge: "an article by"
 rss_badge: "Subscribe feed!"
