--- a/_data/diplomas.yml
+++ b/_data/diplomas.yml
@@ -5,9 +5,9 @@
 - title: "Master Degree (MD)"
   school: "University of Occidental Brittany, France"
   date: "2004 - 2005"
-  description: "Telecommunications 2004-2005 Science and Technologies, Signals and Circuits"
+  description: "Telecommunications Science and Technologies, Signals and Circuits"
 - title: "B.S. Electrical Engineer"
   school: "University of Carabobo, Venezuela"
-  date: "1997 - 2004"
-  description: "Minor in Electronics and 1996-2004 Telecommunications"
+  date: "1996 - 2004"
+  description: "Minor in Electronics and Telecommunications"
 
