--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ disqus_shortname:
 
 # language settings
 isolang: en
-close_btn: "Close"
+close_btn: "Home"
 home_btn: "Home"
 #projects_btn: "Projects"
 #posts_btn: "Posts"
