--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Arunas Mazeika"
 description: "Web Developer in Nantes, France"
-about: "I'm a passionate backend web developer who likes to spend his time writing things for the web. While advocating re-factoring above all I also believe that writing simple and clean code is the key for creating great software. Less is more fellas!"
+about: "I'm a passionate backend web developer who likes to spend his time writing stuff for the web. While always advocating re-factoring above all I also believe that writing simple and clean code is the key to create great software"
 location: "Nantes, France"
 #email: me@arunasmazeika.com
 baseurl: ""
